--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=qna_service
 spring.profiles.active=dev
 spring.output.ansi.enabled=always
 spring.thymeleaf.cache=false
-spring.thymeleaf.prefix=file:src/main/resources/templates/  # Thymeleaf 캐시 끄기
+spring.thymeleaf.prefix=classpath:/templates/
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 
