--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,5 +16,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=DEBUG
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate=DEBUG
